# buketopt-gateway

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  SSH_AUDIT_STAGING.md  docker-compose.yml  pyproject.toml
.cursor/rules/: atlas-canon.mdc  cold-start.mdc  critical-guardrails.mdc  discovery.mdc  pr-workflow-canon.mdc
.github/workflows/: auto-label-dependabot.yml  auto-merge.yml  branch-cleanup-weekly.yml  ci.yml  codeql.yml  fix-ci-bot.yml  gitleaks-scheduled.yml  snyk-warn.yml  stale.yml
scripts/: deploy-prod.sh
src/gateway/: __init__.py  app.py  auth.py  bitrix_client.py  config.py  mappers.py  order_router.py  order_status_router.py  schemas.py
tests/: conftest.py  test_auth.py  test_bitrix_client.py  test_e2e_staging.py  test_order_flow.py
